# virtuanes

./: AboutDlg.cpp  AboutDlg.h  App.cpp  App.h  Archive.cpp  Archive.h  AviConvDlg.cpp  AviConvDlg.h  AviWriter.cpp  AviWriter.h  CHyperLink.h  CMakeLists.txt  ChatDlg.cpp  ChatDlg.h  CheatDlg.cpp  CheatDlg.h  Com.cpp  Com.h  Config.cpp  Config.h  ControllerDlg.cpp  ControllerDlg.h  Crclib.cpp  DatachBarcodeDlg.cpp  DatachBarcodeDlg.h  DebugOut.cpp  DipSwitchDlg.cpp  DipSwitchDlg.h  DirectDraw.cpp  DirectDraw.h  DirectInput.cpp  DirectInput.h  DirectSound.cpp  DirectSound.h  EmuThread.cpp  EmuThread.h  EmulatorDlg.cpp  EmulatorDlg.h  FolderDlg.cpp  FolderDlg.h  (+77 more)
Doc/: Copying.txt  ReadmeSrc.txt
NES/: APU.cpp  APU.h  Cheat.h  Cpu.cpp  IPS.cpp  MMU.cpp  MMU.h  Nes.cpp  Nes.h  PAD.cpp  PPU.cpp  PPU.h  ROM.cpp  ROM.h  ROMDB.cpp
NES/ApuEX/: APU_FDS.cpp  APU_INTERNAL.cpp
NES/ApuEX/emu2413/: emu2413.h
NES/Mapper/: Mapper004.cpp  Mapper005.cpp  Mapper072.cpp  Mapper086.cpp  Mapper092.cpp  MapperFDS.cpp  MapperFactory.cpp  MapperNSF.cpp
NES/PadEX/: EXPAD_Gyromite.cpp  EXPAD_Keyboard.cpp  EXPAD_OekakidsTablet.cpp  EXPAD_Paddle.cpp  EXPAD_SpaceShadowGun.cpp  EXPAD_Supor_Keyboard.cpp  EXPAD_Toprider.cpp  EXPAD_VSZapper.cpp  EXPAD_Zapper.cpp
res/: VirtuaNES.exe.manifest
zlib/: zlib.lib
